# PBMUFHE

./: -m  README.md  common.c  common.h  compute.cpp  config.h  config.h.in  config.status  configure  configure.in  dec.cpp  enc.cpp  introduction  makefile  makefile.am  makefile.in  mul.abefhe  policy_lang.c  policy_lang.h  prvGen.cpp  serialize.cpp  serialize.h  setup.cpp  testPrvGen.cpp  testSerialize.cpp  test_abefhe.cpp
ABE_FHE/: ABE_FHE.cpp  ABE_FHE.h  ABE_mkey.cpp  ABE_mkey.h  Ctxt.cpp  Ctxt.h  abe_core.c  abe_core.h  abe_t.h  config.h  config.h.in  config.status  configure  configure.in  makefile  makefile.am  makefile.in  matrix_fhe.cpp  matrix_fhe.h  timing.cpp  timing.h
