#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(testABEFHE, 1.0, youdao5657@163.com)
AC_CONFIG_SRCDIR([common.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(testABEFHE, 1.0)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_YACC
# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdint.h stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_UINT32_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([floor memset sqrt strdup])

AC_CONFIG_FILES([makefile])
AC_OUTPUT
